[package]
name          = "disruptor"
version       = "3.6.1"
edition       = "2021"
description   = "Low latency inter-thread communication via a ringbuffer (inspired by the LMAX Disruptor)."
license       = "MIT"
authors       = ["Nicholas <nicholassm@gmail.com>"]
repository    = "https://github.com/nicholassm/disruptor-rs"
categories    = ["data-structures", "concurrency"]
keywords      = ["disruptor", "ringbuffer", "message", "mpmc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-utils = "0.8"
core_affinity   = "0.8.1"
thiserror       = "1.0"

[dev-dependencies]
criterion = "0.5"
crossbeam = "0.8"

[[bench]]
name = "spsc"
harness = false

[[bench]]
name = "mpsc"
harness = false

[[bench]]
name = "mpsc_contention"
harness = false

[[bench]]
name = "poller"
harness = false

[[bench]]
name = "counters"
harness = false
